--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "blackbirdinternship",
   "version": "1.0.0",
   "description": "internship project",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "scripts": {
+    "build": "npx rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ganiullin Arthur",
   "license": "ISC",
   "devDependencies": {
     "prettier": "^2.3.0",
+    "rollup": "^2.50.6",
+    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.3.2"
   }
 }
