--- a/package.json
+++ b/package.json
@@ -6,14 +6,45 @@
   "module": "dist/index.esm.js",
   "scripts": {
     "build": "npx rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "Ganiullin Arthur",
   "license": "ISC",
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "testEnvironment": "jsdom"
+  },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "@testing-library/react": "^11.2.7",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.9",
+    "babel-loader": "^8.2.2",
+    "jest": "^27.0.4",
     "prettier": "^2.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.50.6",
     "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^27.0.2",
     "typescript": "^4.3.2"
-  }
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
+  },
+  "dependencies": {}
 }
